fixing header on small screens

--- a/staticfiles/styles/main.css
+++ b/staticfiles/styles/main.css
@@ -224,18 +224,20 @@ input::placeholder {
 
 @media screen and (max-width: 920px) {
     header {
-    display: inline-block;
-    text-align: center;
-    padding: 10px 0px 30px 0px;
+        display: inline-block;
+        padding: 10px 0px 30px 0px;
 }
     .logo-img {
         justify-content: center;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
+        max-height: 55px;
+}
+    .logo-img h1 {
+        font-size: 1.5em;
 }
     .nav_buttons {
         display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
+        flex-direction: column;
 }
     header .nav_buttons a {
         margin-bottom: 5px;
